[package]
name = "image3d"
version = "0.1.0"
edition = "2021"
description = "Deep image analysis and 3D depth map generation"
authors = ["Image3D Tool"]

[[bin]]
name = "image3d"
path = "src/main.rs"

[dependencies]
image = "0.25"
ndarray = "0.16"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
indicatif = "0.17"
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
